objects/Lease_Agreement__c.object
<CustomObject>
    <description>Lease agreement linking one tenant to one property. Acts as the tenant-to-property junction.</description>
    <fields>
        <fullName>Agreed_Monthly_Rent__c</fullName>
        <label>Agreed Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Lease Agreements</relationshipLabel>
        <relationshipName>Lease_Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Tenant__c</referenceTo>
        <relationshipLabel>Lease Agreements</relationshipLabel>
        <relationshipName>Lease_Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lease Agreement</label>
    <listViews>
        <fullName>All_Lease_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Agreed_Monthly_Rent__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Lease Agreements</label>
    </listViews>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>Lease Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>